@@ -1,5 +1,6 @@
 
 test {
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
     useTestNG()
 }
 
